--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,12 @@ dependencies:
   flutter_spinkit: ^5.2.1
   fluttertoast: ^8.2.8
   uuid: ^4.5.1
+  flutter_launcher_icons: ^0.13.1
 
+flutter_icons:
+   android: true
+   ios: true
+   image_path: "assets/images/icon.png"
 
 
 
@@ -79,6 +84,7 @@ flutter:
     - assets/images/landing/
     - assets/images/offres/
     - assets/images/logo.png
+    - assets/images/icon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -106,3 +112,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
