--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   fluttertoast: ^8.2.8
   uuid: ^4.5.1
   flutter_launcher_icons: ^0.13.1
+  #firebase
+  firebase_core: ^3.10.1
+  firebase_auth: ^5.4.1
 
 flutter_icons:
    android: true
