--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,14 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   badges: ^3.1.2
   flutter_spinkit: ^5.2.1
-  fluttertoast: ^8.2.8
+  fluttertoast: ^8.2.10
   uuid: ^4.5.1
   flutter_launcher_icons: ^0.13.1
   #firebase
   firebase_core: ^3.10.1
   firebase_auth: ^5.4.1
+  google_sign_in: ^6.2.2
+  cloud_firestore: ^5.6.2
 
 flutter_icons:
    android: true
