--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,22 +1,8 @@
 plugins {
-    id "com.android.application"
-    id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
-    id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services'
-}
-dependencies {
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:33.8.0')
-
-
-    // TODO: Add the dependencies for Firebase products you want to use
-    // When using the BoM, don't specify versions in Firebase dependencies
-    implementation 'com.google.firebase:firebase-analytics'
-
-
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    id 'com.android.application'
+    id 'com.google.gms.google-services'  // Google services plugin applied here
+    id 'kotlin-android'
+    id 'dev.flutter.flutter-gradle-plugin' // Flutter Gradle plugin
 }
 
 android {
@@ -34,10 +20,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.gogrocer.go_grocer"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
@@ -46,8 +29,6 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -56,3 +37,15 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    // Firebase BoM to manage versions
+    implementation platform('com.google.firebase:firebase-bom:33.8.0')
+
+    // Add Firebase SDK (e.g., Firebase Analytics)
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // You can add more Firebase dependencies here as needed
+}
+
+apply plugin: 'com.google.gms.google-services'  // Apply at the end of the file
